--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 PORT=8000
-DATABASE_URI=mongodb+srv://hazari:hazari@123@cluster0.rafe2pt.mongodb.net
+DATABASE_URI=mongodb+srv://hazari:hazari@cluster0.rafe2pt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_PASSWORD=hazari@123
